...
      return;
    }
    setPage(page + 1);
    fetchFollowPages();
  };
  return (
    <View style={styles.container} testID='followPageScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={followPageList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
