...
      return;
    }
    setPage(page + 1);
    fetchFollowUsers();
  };
  return (
    <View style={styles.container} testID='followUserScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={followUserList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
